Fix background color of collapsed navbar dropdown

--- a/public/index.css
+++ b/public/index.css
@@ -43,12 +43,14 @@ h3 {
     padding-left: 1rem;
     padding-right: 1rem;
     color: #EAE1E1 !important;
+    background-color: #2c2d2e;
 }
+
 
 .navbar-brand img {
     max-width: 30px;
-    
 }
+
 
 /* Landing Page */
 /* I opted for flexbox over the grid because it is inherently responsive */
